--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,16 @@
 /* You can add global styles to this file, and also import other style files */
+@import 'vars';
+@import 'theme';
+
+html, body { height: 100%; }
+body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+
+
+body {
+    margin: 0;
+    font-family: Roboto, "Helvetica Neue", sans-serif;
+    
+    &.dark-theme {
+        background-color: #303030;
+    }
+}
