--- a/src/app/auth/auth-login/auth-login.component.html
+++ b/src/app/auth/auth-login/auth-login.component.html
@@ -2,12 +2,14 @@
     <div class="auth__wrapper">
         <h3 class="auth__title">Authorization</h3>
 
-        <form autocomplete="off" class="auth__form" [formGroup]="form">
+        <form autocomplete="off" class="auth__form" [formGroup]="form" (ngSubmit)="onSubmit()">
+            <!-- Login -->
             <mat-form-field>
                 <mat-label>Login</mat-label>
-                <input type="text" matInput formControlName="login">
+                <input type="text" matInput formControlName="username">
                 <mat-error>Required field!</mat-error>
             </mat-form-field>
+            <!-- Password -->
             <mat-form-field>
                 <mat-label>Password</mat-label>
                 <input type="password" matInput formControlName="password">
@@ -16,5 +18,6 @@
             <br>
             <button mat-flat-button color="accent">Accept</button>
         </form>
+
     </div>
 </section>
