feat: whitepage: add forms

--- a/src/app/whitepage/whitepage.component.html
+++ b/src/app/whitepage/whitepage.component.html
@@ -13,3 +13,117 @@
         </div>
     </div>
 </mat-toolbar>
+
+<div class="whitepage">
+    <div class="container">
+        <h2 class="whitepage__title">Whitepage Input Data</h2>
+
+        <div class="whitepage__row">
+            <div class="whitepage__item">
+                <h3 class="whitepage__subtitle">Product 1</h3>
+                <form class="whitepage__column" autocomplete="off">
+                    <mat-form-field>
+                        <mat-label>Name</mat-label>
+                        <input matInput>
+                    </mat-form-field>
+
+                    <mat-form-field>
+                        <mat-label>Description</mat-label>
+                        <input matInput>
+                    </mat-form-field>
+
+                    <mat-form-field>
+                        <mat-label>Price</mat-label>
+                        <input matInput>
+                    </mat-form-field>
+
+                    <mat-form-field>
+                        <mat-label>image</mat-label>
+                        <input matInput>
+                    </mat-form-field>
+                </form>
+            </div>
+
+            <div class="whitepage__item">
+                <h3 class="whitepage__subtitle">Product 2</h3>
+                <form class="whitepage__column" autocomplete="off">
+                    <mat-form-field>
+                        <mat-label>Name</mat-label>
+                        <input matInput>
+                    </mat-form-field>
+
+                    <mat-form-field>
+                        <mat-label>Description</mat-label>
+                        <input matInput>
+                    </mat-form-field>
+
+                    <mat-form-field>
+                        <mat-label>Price</mat-label>
+                        <input matInput>
+                    </mat-form-field>
+
+                    <mat-form-field>
+                        <mat-label>image</mat-label>
+                        <input matInput>
+                    </mat-form-field>
+                </form>
+            </div>
+
+            <div class="whitepage__item">
+                <h3 class="whitepage__subtitle">Product 3</h3>
+                <form class="whitepage__column" autocomplete="off">
+                    <mat-form-field>
+                        <mat-label>Name</mat-label>
+                        <input matInput>
+                    </mat-form-field>
+
+                    <mat-form-field>
+                        <mat-label>Description</mat-label>
+                        <input matInput>
+                    </mat-form-field>
+
+                    <mat-form-field>
+                        <mat-label>Price</mat-label>
+                        <input matInput>
+                    </mat-form-field>
+
+                    <mat-form-field>
+                        <mat-label>image</mat-label>
+                        <input matInput>
+                    </mat-form-field>
+                </form>
+            </div>
+
+            <div class="whitepage__item">
+                <h3 class="whitepage__subtitle">Product 4</h3>
+                <form class="whitepage__column" autocomplete="off">
+                    <mat-form-field>
+                        <mat-label>Name</mat-label>
+                        <input matInput>
+                    </mat-form-field>
+
+                    <mat-form-field>
+                        <mat-label>Description</mat-label>
+                        <input matInput>
+                    </mat-form-field>
+
+                    <mat-form-field>
+                        <mat-label>Price</mat-label>
+                        <input matInput>
+                    </mat-form-field>
+
+                    <mat-form-field>
+                        <mat-label>image</mat-label>
+                        <input matInput>
+                    </mat-form-field>
+                </form>
+            </div>
+
+        </div>
+
+        <br>
+        <mat-divider></mat-divider>
+        <br>
+        <button mat-flat-button>Generate</button>
+    </div>
+</div>
