--- a/src/app/whitepage/whitepage.component.html
+++ b/src/app/whitepage/whitepage.component.html
@@ -19,106 +19,10 @@
         <h2 class="whitepage__title">Whitepage Input Data</h2>
 
         <div class="whitepage__row">
-            <div class="whitepage__item">
-                <h3 class="whitepage__subtitle">Product 1</h3>
-                <form class="whitepage__column" autocomplete="off">
-                    <mat-form-field>
-                        <mat-label>Name</mat-label>
-                        <input matInput>
-                    </mat-form-field>
-
-                    <mat-form-field>
-                        <mat-label>Description</mat-label>
-                        <input matInput>
-                    </mat-form-field>
-
-                    <mat-form-field>
-                        <mat-label>Price</mat-label>
-                        <input matInput>
-                    </mat-form-field>
-
-                    <mat-form-field>
-                        <mat-label>image</mat-label>
-                        <input matInput>
-                    </mat-form-field>
-                </form>
-            </div>
-
-            <div class="whitepage__item">
-                <h3 class="whitepage__subtitle">Product 2</h3>
-                <form class="whitepage__column" autocomplete="off">
-                    <mat-form-field>
-                        <mat-label>Name</mat-label>
-                        <input matInput>
-                    </mat-form-field>
-
-                    <mat-form-field>
-                        <mat-label>Description</mat-label>
-                        <input matInput>
-                    </mat-form-field>
-
-                    <mat-form-field>
-                        <mat-label>Price</mat-label>
-                        <input matInput>
-                    </mat-form-field>
-
-                    <mat-form-field>
-                        <mat-label>image</mat-label>
-                        <input matInput>
-                    </mat-form-field>
-                </form>
-            </div>
-
-            <div class="whitepage__item">
-                <h3 class="whitepage__subtitle">Product 3</h3>
-                <form class="whitepage__column" autocomplete="off">
-                    <mat-form-field>
-                        <mat-label>Name</mat-label>
-                        <input matInput>
-                    </mat-form-field>
-
-                    <mat-form-field>
-                        <mat-label>Description</mat-label>
-                        <input matInput>
-                    </mat-form-field>
-
-                    <mat-form-field>
-                        <mat-label>Price</mat-label>
-                        <input matInput>
-                    </mat-form-field>
-
-                    <mat-form-field>
-                        <mat-label>image</mat-label>
-                        <input matInput>
-                    </mat-form-field>
-                </form>
-            </div>
-
-            <div class="whitepage__item">
-                <h3 class="whitepage__subtitle">Product 4</h3>
-                <form class="whitepage__column" autocomplete="off">
-                    <mat-form-field>
-                        <mat-label>Name</mat-label>
-                        <input matInput>
-                    </mat-form-field>
-
-                    <mat-form-field>
-                        <mat-label>Description</mat-label>
-                        <input matInput>
-                    </mat-form-field>
-
-                    <mat-form-field>
-                        <mat-label>Price</mat-label>
-                        <input matInput>
-                    </mat-form-field>
-
-                    <mat-form-field>
-                        <mat-label>image</mat-label>
-                        <input matInput>
-                    </mat-form-field>
-                </form>
-            </div>
-
+            <app-whitepage-hand title="Product 1" (setData)="setData($event, 1)"></app-whitepage-hand>
+            <app-whitepage-hand title="Product 2" (setData)="setData($event, 2)"></app-whitepage-hand>
+            <app-whitepage-hand title="Product 3" (setData)="setData($event, 3)"></app-whitepage-hand>
+            <app-whitepage-hand title="Product 4" (setData)="setData($event, 4)"></app-whitepage-hand>
         </div>
 
         <br>
