format data for request

--- a/src/app/whitepage/whitepage.component.html
+++ b/src/app/whitepage/whitepage.component.html
@@ -28,6 +28,6 @@
         <br>
         <mat-divider></mat-divider>
         <br>
-        <button mat-flat-button>Generate</button>
+        <button mat-flat-button (click)="onSubmit()">Generate</button>
     </div>
 </div>
